// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileItemList component > renders correctly 1`] = `
<ul
  className="_fileItemsList_193f73"
  data-testid="file-input-preview-list"
  id="file-items-list"
  tabIndex={-1}
>
  <li
    className="_fileItem_193f73 usa-file-input__preview"
    id="testFile"
  >
    <div
      className="_fileItemText_193f73"
    >
      <div
        aria-label="Status of file testFile.pdf"
        aria-valuetext="uploading"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image is-loading usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="_fileItemBoldMessage_193f73"
        >
          Step 1 of 2: Uploading
        </span>
        <span>
          testFile.pdf
        </span>
      </span>
    </div>
    <div
      className="_fileItemButtons_193f73"
    >
      <button
        aria-label="Remove testFile.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </div>
  </li>
  <li
    className="_fileItem_193f73 bg-error-lighter border-secondary margin-top-1px"
    id="testFile2"
  >
    <div
      className="_fileItemText_193f73"
    >
      <div
        aria-label="Status of file testFile2.pdf"
        aria-valuetext="error"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile2"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="_fileItemBoldMessage_193f73"
        >
          Upload failed, please remove or retry
        </span>
        <span>
          testFile2.pdf
        </span>
      </span>
    </div>
    <div
      className="_fileItemButtons_193f73"
    >
      <button
        aria-label="Remove testFile2.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
      <button
        aria-label="Retry upload for testFile2.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Retry
      </button>
    </div>
  </li>
  <li
    className="_fileItem_193f73 bg-error-lighter border-secondary margin-top-1px"
    id="testFile3"
  >
    <div
      className="_fileItemText_193f73"
    >
      <div
        aria-label="Status of file testFile3.pdf"
        aria-valuetext="error"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile3"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="_fileItemBoldMessage_193f73"
        >
          Failed security scan, please remove
        </span>
        <span>
          testFile3.pdf
        </span>
      </span>
    </div>
    <div
      className="_fileItemButtons_193f73"
    >
      <button
        aria-label="Remove testFile3.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
      <button
        aria-label="Retry upload for testFile3.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Retry
      </button>
    </div>
  </li>
  <li
    className="_fileItem_193f73 usa-file-input__preview"
    id="testFile4"
  >
    <div
      className="_fileItemText_193f73"
    >
      <div
        aria-label="Status of file testFile4.pdf"
        aria-valuetext="upload complete"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile4"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span>
          testFile4.pdf
        </span>
      </span>
    </div>
    <div
      className="_fileItemButtons_193f73"
    >
      <button
        aria-label="Remove testFile4.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </div>
  </li>
  <li
    className="_fileItem_193f73 bg-error-lighter border-secondary margin-top-1px"
    id="testFile44"
  >
    <div
      className="_fileItemText_193f73"
    >
      <div
        aria-label="Status of file testFile4.pdf"
        aria-valuetext="error"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile44"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="_fileItemBoldMessage_193f73"
        >
          Duplicate file, please remove
        </span>
        <span>
          testFile4.pdf
        </span>
      </span>
    </div>
    <div
      className="_fileItemButtons_193f73"
    >
      <button
        aria-label="Remove testFile4.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </div>
  </li>
</ul>
`;

exports[`FileItemList component renders correctly 1`] = `
<ul
  className="fileItemsList"
  data-testid="file-input-preview-list"
  id="file-items-list"
  tabIndex={-1}
>
  <li
    className="fileItem usa-file-input__preview"
    id="testFile"
  >
    <div
      className="fileItemText"
    >
      <div
        aria-label="Status of file testFile.pdf"
        aria-valuetext="uploading"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image is-loading usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="fileItemBoldMessage"
        >
          Step 1 of 2: Uploading
        </span>
        <span>
          testFile.pdf
        </span>
      </span>
    </div>
    <div
      className="fileItemButtons"
    >
      <button
        aria-label="Remove testFile.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </div>
  </li>
  <li
    className="fileItem bg-error-lighter border-secondary margin-top-1px"
    id="testFile2"
  >
    <div
      className="fileItemText"
    >
      <div
        aria-label="Status of file testFile2.pdf"
        aria-valuetext="error"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile2"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="fileItemBoldMessage"
        >
          Upload failed, please remove or retry
        </span>
        <span>
          testFile2.pdf
        </span>
      </span>
    </div>
    <div
      className="fileItemButtons"
    >
      <button
        aria-label="Remove testFile2.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
      <button
        aria-label="Retry upload for testFile2.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Retry
      </button>
    </div>
  </li>
  <li
    className="fileItem bg-error-lighter border-secondary margin-top-1px"
    id="testFile3"
  >
    <div
      className="fileItemText"
    >
      <div
        aria-label="Status of file testFile3.pdf"
        aria-valuetext="error"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile3"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="fileItemBoldMessage"
        >
          Failed security scan, please remove
        </span>
        <span>
          testFile3.pdf
        </span>
      </span>
    </div>
    <div
      className="fileItemButtons"
    >
      <button
        aria-label="Remove testFile3.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
      <button
        aria-label="Retry upload for testFile3.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Retry
      </button>
    </div>
  </li>
  <li
    className="fileItem usa-file-input__preview"
    id="testFile4"
  >
    <div
      className="fileItemText"
    >
      <div
        aria-label="Status of file testFile4.pdf"
        aria-valuetext="upload complete"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile4"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span>
          testFile4.pdf
        </span>
      </span>
    </div>
    <div
      className="fileItemButtons"
    >
      <button
        aria-label="Remove testFile4.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </div>
  </li>
  <li
    className="fileItem bg-error-lighter border-secondary margin-top-1px"
    id="testFile44"
  >
    <div
      className="fileItemText"
    >
      <div
        aria-label="Status of file testFile4.pdf"
        aria-valuetext="error"
        role="progressbar"
      >
        <img
          alt=""
          className="usa-file-input__preview-image usa-file-input__preview-image--pdf"
          data-testid="file-input-preview-image"
          id="testFile44"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
      </div>
      <span
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "inherit",
          }
        }
      >
        <span
          className="fileItemBoldMessage"
        >
          Duplicate file, please remove
        </span>
        <span>
          testFile4.pdf
        </span>
      </span>
    </div>
    <div
      className="fileItemButtons"
    >
      <button
        aria-label="Remove testFile4.pdf document"
        className="usa-button usa-button--unstyled"
        data-testid="button"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </div>
  </li>
</ul>
`;
